@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.101 2020/08/31 23:55:38 gdt Exp $
+# $NetBSD: Makefile,v 1.102 2020/09/27 01:13:11 manu Exp $
 
-DISTNAME=	glusterfs-8.0
-PKGREVISION=	1
+DISTNAME=	glusterfs-8.2
+#PKGREVISION=	1
 CATEGORIES=	filesystems
 MASTER_SITES=	http://bits.gluster.org/pub/gluster/glusterfs/src/
 
