@@ -1,13 +1,13 @@
-$NetBSD: distinfo,v 1.70 2020/07/27 16:06:08 manu Exp $
+$NetBSD: distinfo,v 1.71 2020/09/27 01:13:11 manu Exp $
 
-SHA1 (glusterfs-8.0.tar.gz) = 8b9c5d1abcec207b716bd4d6b05957872c3a0f6d
-RMD160 (glusterfs-8.0.tar.gz) = 157db93505b4baad9f985ac45ff5283ae432352b
-SHA512 (glusterfs-8.0.tar.gz) = 6af94f31e08e9ba9d1f3f674678553815933f8db58672d4225f855dc47f3290e1ad22f44dbe95856f82120bf195bc2df7dbd02c88e3a27d9363877891c619b58
-Size (glusterfs-8.0.tar.gz) = 7800370 bytes
+SHA1 (glusterfs-8.2.tar.gz) = 3830906472d93c5c7e85b67c17a0a8aaff0bbb04
+RMD160 (glusterfs-8.2.tar.gz) = 469df65750ae447abacf57ff8b0975810a4ac1b3
+SHA512 (glusterfs-8.2.tar.gz) = e11ffd544cdfd55e4309bcf10d9f6d3cb13b3c0beeaf578e024c9b40df19f5bc5dc6965bca1166e96e05e42041093c48772b160952c235f7456f0898594d01d2
+Size (glusterfs-8.2.tar.gz) = 7761620 bytes
 SHA1 (patch-config.h.in) = 1560806ebd786139b404544461dcda0ec1d60b37
 SHA1 (patch-configure) = 07d7a61d7c24ab8b0e4bb00ab6ae2452e41d903f
 SHA1 (patch-configure.ac) = fcb7da30005e9a08e7a0f4ac2f5e55511580aa18
-SHA1 (patch-rpc_rpc_lib_rpcsvc.c) = 44d88cdb8f930d3e920618c9ea0cdc8e9f4ebf58
+SHA1 (patch-rpc_rpc_lib_rpcsvc.c) = 287e5da091a2610ee010a44a5b51a90a402cff01
 SHA1 (patch-tools_gfind__missing__files_gfind__missing__files.sh) = 67d374d8dc3213bd3d159e7cb8479c14e8ba162d
 SHA1 (patch-xlators_mgmt_glusterd_src_glusterd-utils.c) = 3e8e6fa5e4baff94532f58a6509f7b5817ce02bf
 SHA1 (patch-xlators_mount_fuse_src_fuse-bridge.c) = 4706bc7264b7e4ec7f01cc143f3edce96213401e
